--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.1",
+    "@emotion/react": "^11.8.2",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.2",
+    "imagemin-optipng": "^8.0.0",
+    "next": "^12.1.2-canary.0",
+    "next-compose-plugins": "^2.2.1",
+    "next-optimized-images": "^2.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.23",
     "eslint": "8.12.0",
-    "eslint-config-next": "12.1.1"
+    "eslint-config-next": "12.1.1",
+    "typescript": "^4.6.3"
   }
 }
